# maze

./: Cargo.toml  README.md  build.bat  pyproject.toml
.github/workflows/: CI.yml
pysrc/maze/: __init__.py  maze.pyi
src/: lib.rs  types.rs  util.rs
src/algorithms/: a_star.rs  image_gen.rs  kruskal.rs  mod.rs
